--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -8,7 +8,9 @@
     "kind": "plugin",
     "displayName": "Kanbot"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-wit": "^6.5.1"
+  },
   "author": {
     "name": "A Strapi developer"
   },
