--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@strapi/helper-plugin": "^4.5.5",
+    "@strapi/plugin-content-manager": "^4.5.5",
     "@strapi/plugin-i18n": "4.5.5",
+    "@strapi/plugin-upload": "^4.5.5",
     "@strapi/plugin-users-permissions": "4.5.5",
     "@strapi/strapi": "4.5.5",
     "mysql": "2.18.1"
