--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -9,7 +9,14 @@
     "displayName": "Kanbot"
   },
   "dependencies": {
-    "node-wit": "^6.5.1"
+    "@reduxjs/toolkit": "^1.9.1",
+    "node-wit": "^6.5.1",
+    "react-icons": "^4.7.1",
+    "react-indiana-drag-scroll": "^2.2.0",
+    "react-redux": "^8.0.5",
+    "reactflow": "^11.4.0",
+    "slugify": "^1.6.5",
+    "uuid": "^9.0.0"
   },
   "author": {
     "name": "A Strapi developer"
