--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-upload": "^4.5.5",
     "@strapi/plugin-users-permissions": "4.5.5",
     "@strapi/strapi": "4.5.5",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "react-toastify": "^9.1.1"
   },
   "author": {
     "name": "A Strapi developer"
