--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.7.1",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "reactflow": "^11.4.0",
     "slugify": "^1.6.5",
     "uuid": "^9.0.0"
