--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/helper-plugin": "^4.5.5",
-    "@strapi/plugin-content-manager": "^4.5.5",
-    "@strapi/plugin-i18n": "4.5.5",
-    "@strapi/plugin-upload": "^4.5.5",
-    "@strapi/plugin-users-permissions": "4.5.5",
-    "@strapi/strapi": "4.5.5",
-    "mysql": "2.18.1"
+    "@strapi/helper-plugin": "^4.5.6",
+    "@strapi/plugin-content-manager": "^4.5.6",
+    "@strapi/plugin-i18n": "4.5.6",
+    "@strapi/plugin-upload": "^4.5.6",
+    "@strapi/plugin-users-permissions": "4.5.6",
+    "@strapi/strapi": "4.5.6",
+    "mysql": "2.18.1",
+    "patch-package": "^6.5.1"
   },
   "author": {
     "name": "A Strapi developer"
