--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.9.9",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.3",
     "fb-messenger-bot-api": "^4.4.0",
     "node-wit": "^6.5.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-highlight-words": "^0.18.0",
     "react-icons": "^4.7.1",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-redux": "^8.0.5",
