--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@ APP_KEYS=G58PIbZg4JoLSMJzZyu4ng==,5tci0+wDkQn31pFLpDmejg==,tG9gFjJ1BvdfWoREoEF8Z
 API_TOKEN_SALT=9dIiDH1h/mz5d5zMyclk8g==
 ADMIN_JWT_SECRET=gPNmQtBqap0V5rdrM/bgtg==
 JWT_SECRET=qxTrtLK608KAGFz+n/anWQ==
+DATABASE_HOST=125.212.221.198
+DATABASE_PORT=3306
+DATABASE_NAME=app_db
+DATABASE_USERNAME=app_db
+DATABASE_PASSWORD=01272345
+WITAI_BOT_ID=881883189812920
+WITAI_BOT_ACCESS_TOKEN=ZQ2VLNCGMZMLAKG3NZ74TSZTCQB5RY33
+WITAI_BOT_CLIENT_TOKEN=HCFH33JZBWUF6FCDJYHGB7BTYTYUERIZ
+OPENAI_API_KEY=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
