--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.3",
     "fb-messenger-bot-api": "^4.4.0",
     "node-wit": "^6.5.1",
+    "openai": "^3.1.0",
     "react-dnd-html5-backend": "^16.0.1",
     "react-highlight-words": "^0.18.0",
     "react-icons": "^4.7.1",
