--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^2.0.3",
     "@strapi/helper-plugin": "^4.6.1",
     "@strapi/plugin-content-manager": "^4.6.1",
     "@strapi/plugin-i18n": "4.6.1",
