--- a/src/plugins/conservation/package.json
+++ b/src/plugins/conservation/package.json
@@ -16,6 +16,7 @@
     "node-wit": "^6.5.1",
     "openai": "^3.1.0",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-drag-drop-files": "^2.3.8",
     "react-highlight-words": "^0.18.0",
     "react-icons": "^4.7.1",
     "react-indiana-drag-scroll": "^2.2.0",
