--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "fb-messenger-bot-api": "^4.4.0",
+    "html-react-parser": "^3.0.9",
     "node-wit": "^6.5.1",
     "openai": "^3.1.0",
     "react-dnd-html5-backend": "^16.0.1",
