--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ WITAI_BOT_ID=881883189812920
 WITAI_BOT_ACCESS_TOKEN=ZQ2VLNCGMZMLAKG3NZ74TSZTCQB5RY33
 WITAI_BOT_CLIENT_TOKEN=HCFH33JZBWUF6FCDJYHGB7BTYTYUERIZ
 OPENAI_API_KEY=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
+
+# FACEBOOK APP INFO
+FB_REQUEST_VERSION=v16.0
+FB_APP_ID=385466796942941
+FB_APP_SECRECT=3093c41d651b2ede7dce87e5cf734c93
