--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@strapi/plugin-upload": "^4.6.1",
     "@strapi/plugin-users-permissions": "4.6.1",
     "@strapi/strapi": "4.6.1",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "strapi-plugin-io": "^1.1.4"
   },
   "author": {
     "name": "A Strapi developer"
