--- a/src/plugins/connection/package.json
+++ b/src/plugins/connection/package.json
@@ -8,7 +8,10 @@
     "kind": "plugin",
     "displayName": "Connection"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.3.3",
+    "react-social-login": "^3.4.16"
+  },
   "author": {
     "name": "A Strapi developer"
   },
