--- a/src/plugins/kanbot/package.json
+++ b/src/plugins/kanbot/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.7.1",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-redux": "^8.0.5",
+    "react-social-login": "^3.4.16",
     "react-toastify": "^9.1.1",
     "reactflow": "^11.4.0",
     "redis": "^4.5.1",
