--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ WITAI_BOT_CLIENT_TOKEN=HCFH33JZBWUF6FCDJYHGB7BTYTYUERIZ
 OPENAI_API_KEY=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
 
 # FACEBOOK APP INFO
+FB_REQ_URL=https://graph.facebook.com
 FB_REQUEST_VERSION=v16.0
 FB_APP_ID=385466796942941
 FB_APP_SECRECT=3093c41d651b2ede7dce87e5cf734c93
