--- a/package.json
+++ b/package.json
@@ -11,14 +11,34 @@
   },
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^2.0.3",
+    "@chatscope/chat-ui-kit-react": "^1.9.9",
+    "@reduxjs/toolkit": "^1.9.1",
     "@strapi/helper-plugin": "^4.6.1",
     "@strapi/plugin-content-manager": "^4.6.1",
     "@strapi/plugin-i18n": "4.6.1",
     "@strapi/plugin-upload": "^4.6.1",
     "@strapi/plugin-users-permissions": "4.6.1",
     "@strapi/strapi": "4.6.1",
+    "axios": "^1.2.3",
+    "chatgpt": "^4.4.0",
+    "fb-messenger-bot-api": "^4.4.0",
+    "html-react-parser": "^3.0.9",
     "mysql": "2.18.1",
-    "strapi-plugin-io": "^1.1.4"
+    "node-wit": "^6.5.1",
+    "openai": "^3.1.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-highlight-words": "^0.18.0",
+    "react-icons": "^4.7.1",
+    "react-indiana-drag-scroll": "^2.2.0",
+    "react-redux": "^8.0.5",
+    "react-social-login": "^3.4.16",
+    "react-toastify": "^9.1.1",
+    "reactflow": "^11.4.0",
+    "redis": "^4.5.1",
+    "slugify": "^1.6.5",
+    "strapi-plugin-io": "^1.1.4",
+    "uuid": "^9.0.0"
   },
   "author": {
     "name": "A Strapi developer"
